--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@segment/clear-cookies": "^2.0.1",
+    "bcrypt": "^5.1.0",
     "chalk": "^5.2.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.4"
+    "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
